removed unused skill blocks added css changed date of employment format

--- a/resume.tex
+++ b/resume.tex
@@ -26,55 +26,21 @@
   \textbf{Programming} Ruby, Javascript, Erlang, Python, PHP, ASP
   Classic, Bash, Lisp\\
   \textbf{Frameworks} Ruby on Rails, jQuery, Prototype, YUI, Nitrogen, Sinatra, Alfresco Surf \\
-  \textbf{Markup} Semantic HTML, JSON, XML, YAML, \LaTeX \\
+  \textbf{Markup} Semantic HTML, CSS, JSON, XML, YAML, \LaTeX \\
   \textbf{Operating Systems} Linux, OS X, Windows
-    
-% Manually adjusting the offset of this table is less than ideal but
-% I think the end result looks better than the description or section
-% methods shown commented out below.
-% \vspace{0.25in}
-% \hspace{-1in}
-% \begin{tabular}{r l}
-%     \textbf{Programming} & Ruby, Javascript, Erlang, Python, PHP, ASP
-%     Classic, Lisp, Haskell, Bash\\
-%     \textbf{Frameworks} & Ruby on Rails, jQuery, Prototype, YUI, Nitrogen, Sinatra, Alfresco Surf \\
-%     \textbf{Markup} & Semantic HTML, JSON, XML, YAML, \LaTeX \\
-%     \textbf{Operating Systems} & Linux, OS X, Windows
-%   \end{tabular}
 
-%   \begin{description}
-%     \item[Programming] Ruby, Javascript, Erlang, Python, PHP, ASP
-%     Classic, Lisp, Haskell \\
-%     \item[Frameworks] Ruby on Rails, jQuery, Prototype, YUI, Nitrogen, Sinatra, Alfresco Surf \\
-%     \item[Markup] Semantic HTML, JSON, XML, YAML, \LaTeX \\
-%     \item[Operating Systems] Linux, OS X, Windows
-%   \end{description}
-
-%   \normalsize{\section{Programming}}
-%   Ruby, Javascript, Erlang, Python, PHP, ASP Classic, Lisp, Haskell,
-%   Bash, Vimscript
-%   \normalsize{\section{Frameworks}}
-%   Ruby on Rails, jQuery, Prototype, YUI, Nitrogen, Sinatra, Alfresco Surf
-%   \normalsize{\section{Markup}}
-%   Semantic HTML, JSON, XML, YAML, \LaTeX
-%   \normalsize{\section{OSs}}
-%   Linux, OS X, Windows
-
-  \section{EXPERIENCE}
-  \begin{tabular}{p{3.5in} r}
-    Curtin University of Technology. Bentley, WA.  & July 09 to Present \\
-    Web Programmer
-  \end{tabular}	
-  \begin{itemize}
+ \section{EXPERIENCE}
+   Curtin University of Technology. Bentley, WA. \\
+   Web Programmer.  July 09 to Present.
+ \begin{itemize}
   \item Developing an Enterprise Document
     Management System (JS, Alfresco)
   \end{itemize} 
 
-  \begin{tabular}{p{3.5in} r}
-    Webfirm. East Perth, WA. & September 07 to July 09 \\
-    Programmer; Promoted Senior Programmer July 2008
-  \end{tabular}	
-  \begin{itemize}
+  Webfirm. East Perth, WA. \\
+  Programmer.  September 2007 to July 2008. \\
+  Senior Programmer. July 2008 to July 2009.
+ \begin{itemize}
   \item Building custom web applications (RoR)
   \item Internal development (RoR, ASP)
   \item Championing and designging proceses and
@@ -87,11 +53,9 @@
   \item Ecommerce
   \end{itemize} 
 
-  \begin{tabular}{p{3.5in} r}
-    Artopsy. Fremantle, WA. & 2007 \\
-    Freelance Programmer
-  \end{tabular}	
-  \begin{itemize}
+   Artopsy. Fremantle, WA. \\
+    Freelance Programmer. 2007.
+ \begin{itemize}
   \item Client Relationship Manager (PHP)
   \item Mailing list application (PHP)
   \end{itemize} 
