added mit license and licensing note

--- a/resume.tex
+++ b/resume.tex
@@ -80,7 +80,12 @@
   \\
   Dunja Susic, Senior Product Specialist. \\
   Industrial Software Solutions. United Kingdom Division. \\
-  Mobile: +447979 318 252
+  Mobile: +447979 318 252 \\
   
 \end{resume} 
+
+\centering
+\hspace{-1.75in}  The resume is open source, distributed under the MIT License. \\
+\hspace{-1.75in}  You can find the source code and a copy of the license at www.github.com/logaan/resume.
+
 \end{document}
