modified license to make sense for resume

--- a/resume.tex
+++ b/resume.tex
@@ -85,7 +85,7 @@
 \end{resume} 
 
 \centering
-\hspace{-1.75in}  The resume is open source, distributed under the MIT License. \\
+\hspace{-1.75in}  The resume is open source, distributed under a modified MIT License. \\
 \hspace{-1.75in}  You can find the source code and a copy of the license at www.github.com/logaan/resume.
 
 \end{document}
