updated resume with latest experience

--- a/resume.tex
+++ b/resume.tex
@@ -6,10 +6,10 @@
 \setlength{\textheight}{10in}
 
 \begin{document} 
-\name{Colin Campbell-McPherson}
+\name{Colin 'Logan' Campbell-McPherson}
 \address{
   \begin{tabular}{r l}
-    0438 050 887 & colin@logaan.net \\
+    +61438 050 887 & colin@logaan.net \\
     www.logaan.net & www.github.com/logaan
   \end{tabular}
 }
@@ -26,12 +26,21 @@
   \textbf{Programming} Ruby, Javascript, Erlang, Python, PHP, ASP
   Classic, Bash, Lisp\\
   \textbf{Frameworks} Ruby on Rails, jQuery, Prototype, YUI, Nitrogen, Sinatra, Alfresco Surf \\
-  \textbf{Markup} Semantic HTML, CSS, JSON, XML, YAML, \LaTeX \\
   \textbf{Operating Systems} Linux, OS X, Windows
 
  \section{EXPERIENCE}
+   Hard Hat Digital. South Yarra, Vic. \\
+   Senior Programmer.  June 10 to Present.
+ \begin{itemize}
+  \item Implementing HHD's CMS on client websites (RoR)
+  \item Publishing open source projects (RoR, Clojure - github.com/hhd)
+  \item Extending HHD's CMS (RoR)
+  \item Building custom web applications (RoR)
+  \item Maintaining legacy websites (PHP)
+  \end{itemize} 
+
    Curtin University of Technology. Bentley, WA. \\
-   Web Programmer.  July 09 to Present.
+   Web Programmer.  July 09 to Jan 10.
  \begin{itemize}
   \item Developing an Enterprise Document
     Management System (JS, Alfresco)
@@ -53,20 +62,14 @@
   \item Ecommerce
   \end{itemize} 
 
-   Artopsy. Fremantle, WA. \\
-    Freelance Programmer. 2007.
- \begin{itemize}
-  \item Client Relationship Manager (PHP)
-  \item Mailing list application (PHP)
-  \end{itemize} 
+  Freelance Programmer. 2006-2007.
 
-  Personal Open Source Projects \\
-  Available at www.github.com/logaan
+  Personal open source projects available at github.com/logaan and ginrummy.logaan.net
 
   \section{ACTIVITIES}
   Presented at Webjam 2008 (Perth), Attended Edge of the Web 2008 (Perth), Attended
   Ruby Kaigi 2009 (Japan), Member of Perth RoRo usergroup
-  
+
   \section{REFEREES}
   Andrew Buntine, Senior Programmer. \\
   Webfirm, Melbourne. \\
@@ -77,11 +80,7 @@
   Associate MAPPS. Research Designer and Analyst. \\
   Organisational Psychologist. \\
   Mobile: 0417 905 919 \\
-  \\
-  Dunja Susic, Senior Product Specialist. \\
-  Industrial Software Solutions. United Kingdom Division. \\
-  Mobile: +447979 318 252 \\
-  
+
 \end{resume} 
 
 \centering
@@ -89,3 +88,4 @@
 \hspace{-1.75in}  You can find the source code and a copy of the license at www.github.com/logaan/resume.
 
 \end{document}
+
