fixed dates and updated andrews employer

--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
 
  \section{EXPERIENCE}
    Hard Hat Digital. South Yarra, Vic. \\
-   Senior Programmer.  June 10 to Present.
+   Senior Programmer.  June 2010 to Present.
  \begin{itemize}
   \item Implementing HHD's CMS on client websites (RoR)
   \item Publishing open source projects (RoR, Clojure - github.com/hhd)
@@ -40,7 +40,7 @@
   \end{itemize} 
 
    Curtin University of Technology. Bentley, WA. \\
-   Web Programmer.  July 09 to Jan 10.
+   Web Programmer.  July 2009 to Jan 2010.
  \begin{itemize}
   \item Developing an Enterprise Document
     Management System (JS, Alfresco)
@@ -72,7 +72,7 @@
 
   \section{REFEREES}
   Andrew Buntine, Senior Programmer. \\
-  Webfirm, Melbourne. \\
+  Hard Hat Digital, Melbourne. \\
   info@andrewbuntine.com \\
   Mobile: 0423 638 309 \\
   \\
