moved and clarified education

--- a/resume.tex
+++ b/resume.tex
@@ -15,12 +15,6 @@
 }
 
 \begin{resume}                        
-  
-  \section{EDUCATION}
-  Curtin University of Technology, Western Australia. \\
-  School of Science, Mathematics and
-  Engineering. Department of Computing. \\
-  BsC Computer Science. 2005-2007
 
   \section{SKILLS} 
   \textbf{Programming} Ruby, Javascript, Erlang, Python, PHP, ASP
@@ -69,6 +63,12 @@
   \section{ACTIVITIES}
   Presented at Webjam 2008 (Perth), Attended Edge of the Web 2008 (Perth), Attended
   Ruby Kaigi 2009 (Japan), Member of Perth RoRo usergroup
+
+  \section{EDUCATION}
+  Curtin University of Technology, Western Australia. \\
+  School of Science, Mathematics and
+  Engineering. Department of Computing. \\
+  BsC Computer Science. 2005-2007. Did not complete.
 
   \section{REFEREES}
   Andrew Buntine, Senior Programmer. \\
