updated buntine's title

--- a/resume.tex
+++ b/resume.tex
@@ -71,7 +71,7 @@
   BsC Computer Science. 2005-2007. Did not complete.
 
   \section{REFEREES}
-  Andrew Buntine, Senior Programmer. \\
+  Andrew Buntine, Lead Developer. \\
   Hard Hat Digital, Melbourne. \\
   info@andrewbuntine.com \\
   Mobile: 0423 638 309 \\
