changed end date of hard hat

--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 
  \section{EXPERIENCE}
    Hard Hat Digital. South Yarra, Vic. \\
-   Senior Programmer.  June 2010 to Present.
+   Senior Programmer.  June 2010 to May 2011.
  \begin{itemize}
   \item Implementing HHD's CMS on client websites (RoR)
   \item Publishing open source projects (RoR, Clojure - github.com/hhd)
