I think paired quotes look better

--- a/resume.tex
+++ b/resume.tex
@@ -6,7 +6,7 @@
 \setlength{\textheight}{10in}
 
 \begin{document} 
-\name{Colin 'Logan' Campbell-McPherson}
+\name{Colin `Logan' Campbell-McPherson}
 \address{
   \begin{tabular}{r l}
     +61438 050 887 & colin@logaan.net \\
