expanded on webfirm accomplishments

--- a/resume.tex
+++ b/resume.tex
@@ -78,12 +78,11 @@
   Programmer.  September 2007 to July 2008. \\
   Senior Programmer. July 2008 to July 2009.
   \begin{itemize}
-  \item Hackless
-  \item Houston
-  \item Bringing in rails
-  \item Bringing in SVN and then Git
-  \item Writing new CMS
-  \item Client sites
+  \item Build app that automated much of my job adding our CMS to client sites
+  \item Build app that managed automated deployment of all internal Rails sites
+  \item Introduced Rails, trained staff and implemented a new CMS to use with Rails
+  \item Introduced SVN and then Git, trained staff and set up servers
+  \item Rapidly implemented client sites on tight budgets and deadlines
   \end{itemize} 
 
   %  Freelance Programmer. 2006-2007.
@@ -96,9 +95,9 @@
     Clojure at a Post Office
 
     \textbf{Melbourne FP User Group} \\
-    Intro to Erlang, A Monad is not a Burrito, Clojure Workshop, Promise Streams,
-    OO values in FP languages, Clojure at a Post Office, Intro to Elixir, Full
-    Stack development with FP (Panel)
+    Intro to Erlang, A Monad is not a Burrito, Clojure Workshop, Promise
+    Streams, OO values in FP languages, Clojure at a Post Office, Intro to
+    Elixir, Full Stack development with FP (Panel)
 
     \textbf{Melbourne Clojure User Group} \\
     Intro to Datomic, Promise Streams, Async IO Coordination, Nonaga, Squid
