thoughtworks experience expanded

--- a/resume.tex
+++ b/resume.tex
@@ -40,31 +40,33 @@
   Silverpond. Melbourne, Vic. \\
   Software Engineer.  July 2011 - November 2012.
   \begin{itemize}
+  \item Bluechiip
   \item Aus Post
   \item Powercor
   \item 7-Eleven
-  \item Bluechiip
   \end{itemize} 
 
   ThoughtWorks. Melbourne, Vic. \\
   Consultant Developer.  July 2011 - November 2012.
   \begin{itemize}
-  \item NBN
-  \item Live below the line
-  \item IOOF
-  \item My Red Alert
-  \item New Organising Institute - Ballot Information Project
-  \item Aus Registry
-  \item Hitnet
+  \item Payment consolidation service for NBN (Java)
+  \item Charity campaign platform for Live Below The Line (Rails)
+  \item Three real time financial web services for IOOF (Java)
+  \item Rapidly developed MVP for My Red Alert (Rails)
+  \item US political candidate information site for New Organising Institute
+    (Rails)
+  \item Domain registry, and performance test suite for Aus Registry (Java
+    and Scala)
+  \item Automated content deployment network for Hitnet (Bash)
   \end{itemize} 
 
   Hard Hat Digital. South Yarra, Vic. \\
   Senior Programmer.  June 2010 to May 2011.
   \begin{itemize}
-  \item Implementing HHD's CMS on client websites (RoR)
-  \item Publishing open source projects (RoR, Clojure - github.com/hhd)
-  \item Extending HHD's CMS (RoR)
-  \item Building custom web applications (RoR)
+  \item Implementing HHD's CMS on client websites (Rails)
+  \item Publishing open source projects (Rails, Clojure)
+  \item Extending HHD's CMS (Rails)
+  \item Building custom web applications (Rails)
   \item Maintaining legacy websites (PHP)
   \end{itemize} 
 
@@ -80,7 +82,8 @@
   \begin{itemize}
   \item Build app that automated much of my job adding our CMS to client sites
   \item Build app that managed automated deployment of all internal Rails sites
-  \item Introduced Rails, trained staff and implemented a new CMS to use with Rails
+  \item Introduced Rails, trained staff and implemented a new CMS to use with
+    Rails
   \item Introduced SVN and then Git, trained staff and set up servers
   \item Rapidly implemented client sites on tight budgets and deadlines
   \end{itemize} 
