--- a/resume.tex
+++ b/resume.tex
@@ -21,12 +21,12 @@
   \begin{multicols}{2}
     \section{SKILLS} 
     \textbf{Languages} \\
-    Clojure, ClojureScript, Javascript, Ruby, Python, Java,
-    Erlang, Haskell, Cold Fusion, PHP, ASP Classic, Vimscript
+    Clojure, ClojureScript, Javascript, Ruby, Python, Java, Erlang, Haskell,
+    Cold Fusion, PHP, ASP Classic, Vimscript
 
     \textbf{Frameworks} \\
-    Liberator, Reagent, React, Angular, Rails, Swing,
-    Dropwizard, Prototype, YUI, Nitrogen, Alfresco Surf
+    Liberator, Reagent, React, Angular, Rails, Spring, Dropwizard, Netty,
+    Prototype, YUI, Nitrogen, Alfresco Surf
 
     \textbf{Tools} \\
     Docker, AWS, Heroku, Postgres, Cassandra, Datomic, RabbitMQ \\
@@ -40,23 +40,27 @@
   Silverpond. Melbourne, Vic. \\
   Software Engineer.  July 2011 - November 2012.
   \begin{itemize}
-  \item Bluechiip
-  \item Aus Post
-  \item Powercor
-  \item 7-Eleven
+  \item Physical fault detection model from smart meter readings, API and UI for
+    fault analysis and remedy tracking, Power network simulation, and Data
+    processing pipeline for Powercor (Python, Clojure, ClojureScript, React)
+  \item Training, architecture proposals, and prototyping for Aus Post (Clojure)
+  \item Record management interface embedded in a medical device for Bluechiip
+    (JS)
+  \item Franchisee relationship management UI for 7-Eleven (Clojurescript,
+    React)
   \end{itemize} 
 
   ThoughtWorks. Melbourne, Vic. \\
   Consultant Developer.  July 2011 - November 2012.
   \begin{itemize}
+  \item Three real time financial web services for IOOF (Java)
   \item Payment consolidation service for NBN (Java)
   \item Charity campaign platform for Live Below The Line (Rails)
-  \item Three real time financial web services for IOOF (Java)
+  \item Domain registry, and performance test suite for Aus Registry (Java
+    and Scala)
   \item Rapidly developed MVP for My Red Alert (Rails)
   \item US political candidate information site for New Organising Institute
     (Rails)
-  \item Domain registry, and performance test suite for Aus Registry (Java
-    and Scala)
   \item Automated content deployment network for Hitnet (Bash)
   \end{itemize} 
 
