--- a/resume.tex
+++ b/resume.tex
@@ -56,8 +56,8 @@
   \item Three real time financial web services for IOOF (Java)
   \item Payment consolidation service for NBN (Java)
   \item Charity campaign platform for Live Below The Line (Rails)
-  \item Domain registry, and performance test suite for Aus Registry (Java
-    and Scala)
+  \item Domain registry, and performance test suite for Aus Registry (Java,
+    Scala)
   \item Rapidly developed MVP for My Red Alert (Rails)
   \item US political candidate information site for New Organising Institute
     (Rails)
@@ -75,7 +75,7 @@
   \end{itemize} 
 
   Curtin University of Technology. Bentley, WA. \\
-  Web Programmer.  July 2009 to Jan 2010.
+  Web Programmer.  July 2009 to January 2010.
   \begin{itemize}
   \item Developing an Enterprise Document Management System (JS, Alfresco)
   \end{itemize} 
