phone number, scala and url period

--- a/resume.tex
+++ b/resume.tex
@@ -11,7 +11,7 @@
 \name{Colin `Logan' Campbell-McPherson}
 \address{
   \begin{tabular}{r l}
-    +61 438 050 887 & colin@logaan.net \\
+    0438 050 887 & colin@logaan.net \\
     logaan.github.io & github.com/logaan
   \end{tabular}
 }
@@ -22,7 +22,7 @@
     \section{SKILLS} 
     \textbf{Languages} \\
     Clojure, ClojureScript, Javascript, Ruby, Python, Java, Erlang, Haskell,
-    Cold Fusion, PHP, ASP Classic, Vimscript
+    Scala, Cold Fusion, PHP, ASP Classic, Vimscript
 
     \textbf{Frameworks} \\
     Liberator, Reagent, React, Angular, Rails, Spring, Dropwizard, Netty,
@@ -142,7 +142,7 @@
 
 \centering
 \hspace{-1.75in}  The resume is open source, distributed under a modified MIT License. \\
-\hspace{-1.75in}  You can find the source code and a copy of the license at www.github.com/logaan/resume.
+\hspace{-1.75in}  You can find the source code and a copy of the license at www.github.com/logaan/resume
 
 \end{document}
 
