--- a/resume.tex
+++ b/resume.tex
@@ -127,22 +127,26 @@
   Engineering. Department of Computing. \\
   BsC Computer Science. 2005-2007. Did not complete.
 
+  \begin{multicols}{2}
   \section{REFEREES}
-  Andrew Buntine, Technical Director. \\
-  Hard Hat Digital, Melbourne. \\
+  Andrew Buntine, Technical Director \\
+  Hard Hat Digital, Melbourne \\
   info@andrewbuntine.com \\
   0423 638 309 \\
   \\
-  James Sofra, Consultant Developer. \\
-  Troy-West, Melbourne. \\
+  James Sofra, Consultant Developer \\
+  Troy-West, Melbourne \\
   james.sofra@gmail.com \\
   0425 723 375
+  \end{multicols}
 
 \end{resume} 
 
 \centering
-\hspace{-1.75in}  The resume is open source, distributed under a modified MIT License. \\
-\hspace{-1.75in}  You can find the source code and a copy of the license at www.github.com/logaan/resume
+\hspace{-1.75in} The resume is open source, distributed under a modified MIT
+License. \\
+\hspace{-1.75in} You can find the source code and a copy of the license at
+www.github.com/logaan/resume
 
 \end{document}
 
