--- a/resume.tex
+++ b/resume.tex
@@ -112,7 +112,7 @@
     \textbf{ThoughtWorks Internal Conferences} \\
     Why Functional Programming matters, Introduction to Erlang
 
-    \textbf{Webjam} \\
+    \textbf{Webjam9 2008} \\
     Automated CMS back end website generation
   \end{multicols}
 
