--- a/resume.tex
+++ b/resume.tex
@@ -33,7 +33,7 @@
   \section{EXPERIENCE}
 
   Silverpond. Melbourne, Vic. \\
-  Software Engineer.  July 2011 - November 2012.
+  Software Engineer.  November 2012 - Present.
   \begin{itemize}
   \item Physical fault detection model from smart meter readings, API and UI for
     fault analysis and remedy tracking, Power network simulation, and Data
