--- a/resume.tex
+++ b/resume.tex
@@ -141,7 +141,7 @@
 \hspace{-1.75in} The resume is open source, distributed under a modified MIT
 License. \\
 \hspace{-1.75in} You can find the source code and a copy of the license at
-www.github.com/logaan/resume
+github.com/logaan/resume
 
 \end{document}
 
