updated name and email

--- a/resume.tex
+++ b/resume.tex
@@ -3,10 +3,10 @@
 \usepackage{multicol}
 
 \begin{document} 
-\name{Colin `Logan' Campbell-McPherson}
+\name{Logan Campbell}
 \address{
   \begin{tabular}{r l}
-    0438 050 887 & colin@logaan.net \\
+    0438 050 887 & resume@logaan.net \\
     logaan.github.io & github.com/logaan
   \end{tabular}
 }
