--- a/resume.tex
+++ b/resume.tex
@@ -126,7 +126,7 @@
     \section{REFEREES}
     Andrew Buntine, Technical Director \\
     Hard Hat Digital, Melbourne \\
-    info@andrewbuntine.com \\
+    info@bunts.io \\
     0423 638 309
 
     James Sofra, Consultant Developer \\
