adding zendesk experience

--- a/resume.tex
+++ b/resume.tex
@@ -17,7 +17,7 @@
     \section{SKILLS} 
     \textbf{Languages} \\
     Clojure, ClojureScript, Javascript, Ruby, Python, Java, Erlang, Haskell,
-    Scala, Cold Fusion, PHP, ASP Classic, Vimscript
+    Scala, Rust, Groovy, Lua, Cold Fusion, PHP, ASP Classic
 
     \textbf{Frameworks} \\
     Liberator, Reagent, React, Angular, Rails, Spring, Dropwizard, Netty,
@@ -32,8 +32,23 @@
 
   \section{EXPERIENCE}
 
+  Zendesk. Melbourne, Vic. \\
+  Senior Software Engineer. August 2017 - May 2019. \\
+  Technical Lead for Apps. Oct 2018 - May 2021. \\
+  Staff Software Engineer. May 2019 - March 2022. \\
+  Group Technical Lead for Developer Ecosystem. May 2021 - Present. \\
+  Senior Staff Software Engineer. March 2022 - Present.
+  \begin{itemize}
+  \item Evaluation of API Gateways and tender process
+  \item Lead the design of tools, standards, and strategory for REST API
+    versioning across all of Zendesk (Ruby, Golang, REST)
+  \item Design of a request rate monitor and limiter (AWS)
+  \item Design and prototypes of a distributed transaction manager (SQS, Ruby,
+    Java)
+  \end{itemize}
+
   Silverpond. Melbourne, Vic. \\
-  Software Engineer.  November 2012 - Present.
+  Software Engineer.  November 2012 - 2017.
   \begin{itemize}
   \item Physical fault detection model from smart meter readings, API and UI for
     fault analysis and remedy tracking, Power network simulation, and Data
