Updated for July 2023

--- a/resume.tex
+++ b/resume.tex
@@ -16,15 +16,16 @@
   \begin{multicols}{2}
     \section{SKILLS} 
     \textbf{Languages} \\
-    Clojure, ClojureScript, Javascript, Ruby, Python, Java, Erlang, Haskell,
-    Scala, Rust, Groovy, Lua, Cold Fusion, PHP, ASP Classic
+    Clojure, ClojureScript, Javascript, Ruby, Python, Java, Golang, Erlang,
+    Haskell, Scala, Rust, Groovy, Lua, Cold Fusion, PHP, ASP Classic
 
     \textbf{Frameworks} \\
     Liberator, Reagent, React, Angular, Rails, Spring, Dropwizard, Netty,
     Prototype, YUI, Nitrogen, Alfresco Surf
 
     \textbf{Tools} \\
-    Docker, AWS, Heroku, Postgres, Cassandra, Datomic, RabbitMQ \\
+    Kubernetes, Kafka, Docker, AWS, Heroku, Postgres, Cassandra, Datomic,
+    RabbitMQ \\
 
     \textbf{Practices} \\
     Scrum, Kanban, Lean, SAFe, TDD, Pair Programming, CI, CD
@@ -45,6 +46,7 @@
   \item Design of a request rate monitor and limiter (AWS)
   \item Design and prototypes of a distributed transaction manager (SQS, Ruby,
     Java)
+  \item Development of App market (Ruby, Javascript, MySql)
   \end{itemize}
 
   Silverpond. Melbourne, Vic. \\
@@ -132,6 +134,10 @@
   \end{multicols}
 
   \section{EDUCATION}
+  Monash University, Victoria. \\
+  Faculty of Information Technology. \\
+  Master of Computer Science. 2022-Present.
+  
   Curtin University of Technology, Western Australia. \\
   School of Science, Mathematics and
   Engineering. Department of Computing. \\
@@ -139,15 +145,17 @@
 
   \begin{multicols}{2}
     \section{REFEREES}
-    Andrew Buntine, Technical Director \\
-    Hard Hat Digital, Melbourne \\
+    Andrew Buntine, Staff Engineer \\
+    Culture Amp, Melbourne \\
+    Was my senior at Webfirm and Hard Hat. \\
     info@bunts.io \\
     0423 638 309
 
-    James Sofra, Consultant Developer \\
-    Troy-West, Melbourne \\
-    james.sofra@gmail.com \\
-    0425 723 375
+	Prakriti Mateti, Director of Engineering \\
+	Culture Amp, Melbourne \\
+	Was my manager at Zendesk. \\
+	itirkarp@gmail.com \\
+	0420 801 021
   \end{multicols}
 
 \end{resume} 
