Links and corrections

--- a/resume.tex
+++ b/resume.tex
@@ -1,13 +1,14 @@
 \documentclass[margin]{res}
 \setlength{\textheight}{10in}
 \usepackage{multicol}
+\usepackage{hyperref}
 
 \begin{document} 
 \name{Logan Campbell}
 \address{
   \begin{tabular}{r l}
-    0438 050 887 & resume@logaan.net \\
-    logaan.github.io & github.com/logaan
+    0438 050 887 & mail@logaan.net \\
+    \href{http://logan.cam/}{logan.cam} & \href{http://github.com/logaan}{github.com/logaan}
   \end{tabular}
 }
 
@@ -16,8 +17,11 @@
   \begin{multicols}{2}
     \section{SKILLS} 
     \textbf{Languages} \\
-    Clojure, ClojureScript, Javascript, Ruby, Python, Java, Golang, Erlang,
-    Haskell, Scala, Rust, Groovy, Lua, Cold Fusion, PHP, ASP Classic
+    Clojure, ClojureScript, Cold Fusion, \\
+    Erlang, Golang, Gleam, Grain, Groovy, \\
+    Haskell, Java, Javascript, Lua, PHP, \\
+    Python, ReasonML, Ruby, Rust, Scala, \\
+    VB Script
 
     \textbf{Frameworks} \\
     Liberator, Reagent, React, Angular, Rails, Spring, Dropwizard, Netty,
@@ -33,7 +37,15 @@
 
   \section{EXPERIENCE}
 
-  Zendesk. Melbourne, Vic. \\
+  Block - Afterpay. Melbourne. \\
+  Underwriting - Credit Risk team. \\
+  Software Engineer - Level 6 IC (Team Leader) Sep 2023 - Mar 2024.
+  \begin{itemize}
+  \item Lead the back end implementation of Pay As You Go with no payment up
+  front
+  \end{itemize}
+
+  Zendesk. Melbourne. \\
   Senior Software Engineer. August 2017 - May 2019. \\
   Technical Lead for Apps. Oct 2018 - May 2021. \\
   Staff Software Engineer. May 2019 - March 2022. \\
@@ -41,7 +53,7 @@
   Senior Staff Software Engineer. March 2022 - Present.
   \begin{itemize}
   \item Evaluation of API Gateways and tender process
-  \item Lead the design of tools, standards, and strategory for REST API
+  \item Lead the design of tools, standards, and strategy for REST API
     versioning across all of Zendesk (Ruby, Golang, REST)
   \item Design of a request rate monitor and limiter (AWS)
   \item Design and prototypes of a distributed transaction manager (SQS, Ruby,
@@ -49,7 +61,7 @@
   \item Development of App market (Ruby, Javascript, MySql)
   \end{itemize}
 
-  Silverpond. Melbourne, Vic. \\
+  Silverpond. Melbourne. \\
   Software Engineer.  November 2012 - 2017.
   \begin{itemize}
   \item Physical fault detection model from smart meter readings, API and UI for
@@ -62,7 +74,7 @@
     React)
   \end{itemize} 
 
-  ThoughtWorks. Melbourne, Vic. \\
+  ThoughtWorks. Melbourne. \\
   Consultant Developer.  July 2011 - November 2012.
   \begin{itemize}
   \item Three real time financial web services for IOOF (Java)
@@ -76,7 +88,7 @@
   \item Automated content deployment network for Hitnet (Bash)
   \end{itemize} 
 
-  Hard Hat Digital. South Yarra, Vic. \\
+  Hard Hat Digital. South Yarra. \\
   Senior Programmer.  June 2010 to May 2011.
   \begin{itemize}
   \item Implementing HHD's CMS on client websites (Rails)
@@ -86,13 +98,13 @@
   \item Maintaining legacy websites (PHP)
   \end{itemize} 
 
-  Curtin University of Technology. Bentley, WA. \\
+  Curtin University of Technology. Perth. \\
   Web Programmer.  July 2009 to January 2010.
   \begin{itemize}
   \item Developing an Enterprise Document Management System (JS, Alfresco)
   \end{itemize} 
 
-  Webfirm. East Perth, WA. \\
+  Webfirm. Perth. \\
   Programmer.  September 2007 to July 2008. \\
   Senior Programmer. July 2008 to July 2009.
   \begin{itemize}
@@ -104,9 +116,9 @@
   \item Rapidly implemented client sites on tight budgets and deadlines
   \end{itemize} 
 
-  %  Freelance Programmer. 2006-2007.
-  %
-  %  Personal open source projects available at github.com/logaan
+  Freelance Programmer. 2006-2007.
+  
+  Personal open source projects available at \href{http://github.com/logaan}{github.com/logaan}
 
   \begin{multicols}{2}
     \section{TALKS}
@@ -136,7 +148,7 @@
   \section{EDUCATION}
   Monash University, Victoria. \\
   Faculty of Information Technology. \\
-  Master of Computer Science. 2022-Present.
+  Graduate Certificate of Computer Science. 2024.
   
   Curtin University of Technology, Western Australia. \\
   School of Science, Mathematics and
@@ -164,7 +176,7 @@
 \hspace{-1.75in} The resume is open source, distributed under a modified MIT
 License. \\
 \hspace{-1.75in} You can find the source code and a copy of the license at
-github.com/logaan/resume
+\href{http://github.com/logaan/resume}{github.com/logaan/resume}
 
 \end{document}
 
