Fixing page break and minor re-wording

--- a/resume.tex
+++ b/resume.tex
@@ -41,8 +41,8 @@
   Underwriting - Credit Risk team. \\
   Software Engineer - Level 6 IC (Team Leader) Sep 2023 - Mar 2024.
   \begin{itemize}
-  \item Lead the back end implementation of Pay As You Go with no payment up
-  front
+  \item Technical lead for the back end implementation of Pay As You Go with no
+  payment up front (Kotlin, Python)
   \end{itemize}
 
   Zendesk. Melbourne. \\
@@ -87,6 +87,8 @@
     (Rails)
   \item Automated content deployment network for Hitnet (Bash)
   \end{itemize} 
+
+  \pagebreak
 
   Hard Hat Digital. South Yarra. \\
   Senior Programmer.  June 2010 to May 2011.
@@ -159,24 +161,24 @@
     \section{REFEREES}
     Andrew Buntine, Staff Engineer \\
     Culture Amp, Melbourne \\
-    Was my senior at Webfirm and Hard Hat. \\
+    My senior at Webfirm and Hard Hat. \\
     info@bunts.io \\
     0423 638 309
 
 	Prakriti Mateti, Director of Engineering \\
 	Culture Amp, Melbourne \\
-	Was my manager at Zendesk. \\
+	My manager at Zendesk. \\
 	itirkarp@gmail.com \\
 	0420 801 021
   \end{multicols}
 
 \end{resume} 
 
-\centering
-\hspace{-1.75in} The resume is open source, distributed under a modified MIT
-License. \\
-\hspace{-1.75in} You can find the source code and a copy of the license at
-\href{http://github.com/logaan/resume}{github.com/logaan/resume}
+% \centering
+% \hspace{-1.75in} The resume is open source, distributed under a modified MIT
+% License. \\
+% \hspace{-1.75in} You can find the source code and a copy of the license at
+% \href{http://github.com/logaan/resume}{github.com/logaan/resume}
 
 \end{document}
 
