Skills and whitespace

--- a/resume.tex
+++ b/resume.tex
@@ -3,7 +3,7 @@
 \usepackage{multicol}
 \usepackage{hyperref}
 
-\begin{document} 
+\begin{document}
 \name{Logan Campbell}
 \address{
   \begin{tabular}{r l}
@@ -12,24 +12,24 @@
   \end{tabular}
 }
 
-\begin{resume}                        
+\begin{resume}
 
   \begin{multicols}{2}
-    \section{SKILLS} 
+    \section{SKILLS}
     \textbf{Languages} \\
     Clojure, ClojureScript, Cold Fusion, \\
     Erlang, Golang, Gleam, Grain, Groovy, \\
-    Haskell, Java, Javascript, Lua, PHP, \\
-    Python, ReasonML, Ruby, Rust, Scala, \\
-    VB Script
+    Haskell, Kotlin, Java, Javascript, Lua, \\
+    PHP, Python, ReasonML, Ruby, Rust, \\
+    Scala, Typescript, VB Script
 
     \textbf{Frameworks} \\
     Liberator, Reagent, React, Angular, Rails, Spring, Dropwizard, Netty,
     Prototype, YUI, Nitrogen, Alfresco Surf
 
     \textbf{Tools} \\
-    Kubernetes, Kafka, Docker, AWS, Heroku, Postgres, Cassandra, Datomic,
-    RabbitMQ \\
+    Kubernetes, RabbitMQ, AWS, Cassandra, Datomic, Docker, Heroku, Kafka,
+    Postgres, MySQL \\
 
     \textbf{Practices} \\
     Scrum, Kanban, Lean, SAFe, TDD, Pair Programming, CI, CD
@@ -72,7 +72,7 @@
     (JS)
   \item Franchisee relationship management UI for 7-Eleven (Clojurescript,
     React)
-  \end{itemize} 
+  \end{itemize}
 
   ThoughtWorks. Melbourne. \\
   Consultant Developer.  July 2011 - November 2012.
@@ -86,7 +86,7 @@
   \item US political candidate information site for New Organising Institute
     (Rails)
   \item Automated content deployment network for Hitnet (Bash)
-  \end{itemize} 
+  \end{itemize}
 
   \pagebreak
 
@@ -98,13 +98,13 @@
   \item Extending HHD's CMS (Rails)
   \item Building custom web applications (Rails)
   \item Maintaining legacy websites (PHP)
-  \end{itemize} 
+  \end{itemize}
 
   Curtin University of Technology. Perth. \\
   Web Programmer.  July 2009 to January 2010.
   \begin{itemize}
   \item Developing an Enterprise Document Management System (JS, Alfresco)
-  \end{itemize} 
+  \end{itemize}
 
   Webfirm. Perth. \\
   Programmer.  September 2007 to July 2008. \\
@@ -116,10 +116,10 @@
     Rails
   \item Introduced SVN and then Git, trained staff and set up servers
   \item Rapidly implemented client sites on tight budgets and deadlines
-  \end{itemize} 
+  \end{itemize}
 
   Freelance Programmer. 2006-2007.
-  
+
   Personal open source projects available at \href{http://github.com/logaan}{github.com/logaan}
 
   \begin{multicols}{2}
@@ -151,7 +151,7 @@
   Monash University, Victoria. \\
   Faculty of Information Technology. \\
   Graduate Certificate of Computer Science. 2024.
-  
+
   Curtin University of Technology, Western Australia. \\
   School of Science, Mathematics and
   Engineering. Department of Computing. \\
@@ -172,7 +172,7 @@
 	0420 801 021
   \end{multicols}
 
-\end{resume} 
+\end{resume}
 
 % \centering
 % \hspace{-1.75in} The resume is open source, distributed under a modified MIT
